[package]
name = "boodschappies-http"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-ws = "0.3.0"
once_cell = "1.20.3"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
tokio = { version = "1.44.0", features = ["full"] }
uuid = { version = "1.15.1", features = ["serde", "v7"] }
