[package]
name = "boodschappies-http"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-http = "3.10.0"
actix-web = "4.9.0"
actix-ws = "0.3.0"
config = "0.15.9"
futures-util = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
once_cell = "1.20.3"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
sha2 = "0.10.8"
tokio = { version = "1.44.0", features = ["full"] }
toml = "0.8.20"
uuid = { version = "1.15.1", features = ["serde", "v7"] }
